EPBDS-15451 Refactor spreadsheet indexing to use logical indices consistently
  This refactoring addresses backward compatibility issues introduced by
  EPBDS-14277 (Output Model Description feature) by ensuring consistent
  use of logical indices throughout the spreadsheet calculation system.